# kiro-cli-history

./: .gitignore  LICENSE  README.md  install.sh  kiro_history.py  pyproject.toml  uninstall.sh
demo/: generate_demo_data.py
kiro_cli_history/: __init__.py  config.py  main.py
tests/: __init__.py  test_config.py  test_main.py
